# pi-assistant

./: .env.example  .gitignore  README.MD  ollama_warmup.sh  pyproject.toml  setup_pi.sh
i18n/: de.yml  en.yml
pia/: config.py  main.py  workflow.py
pia/asr/: canary.py  main.py  parakeet.py  transcription.py
pia/nlp/: llm.py  prompts.py
pia/nlp/tools/: main.py  tool.py  tool_response.py
pia/nlp/tools/hue/: config.py  spec.py
pia/nlp/tools/weather/: config.py  spec.py
pia/nlp/tools/wikipedia/: config.py  spec.py
pia/tts/: kokoro.py  main.py  piper.py
pia/wakeword/: detector.py  listener.py
